# avbd-demo3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  launch-viewer.cmd  probe_spherestack.cpp
build-instrumented-release-nmake/: CMakeCache.txt  Makefile  box_roll_probe.cpp  capsule_contact_count_probe.cpp  capsule_detail_probe.cpp  capsule_ground_probe.cpp  capsule_pile_probe.cpp  capsule_pile_probe_tmp.cpp  capsule_stack_probe.cpp  capsule_two_probe.cpp  cmake_install.cmake  cylinder_ground_probe.cpp  cylinder_scene_probe.cpp  newtons_cradle_probe.cpp  sphere_contact_probe.cpp  sphere_dt_probe.cpp  sphere_friction_probe.cpp  sphere_friction_sweep.cpp  sphere_probe.cpp  sphere_ramp_probe.cpp  sphere_recover_probe.cpp  sphere_roll_probe.cpp  sphere_stack_long_probe.cpp  sphere_stack_probe.cpp  sphere_two_probe.cpp
build-release-nmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release-vs2022-nmake/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.lib
build-review/: CMakeCache.txt
build-review-nmake/: CMakeCache.txt  Makefile  avbd_demo3d.ilk  cmake_install.cmake
build-review-vs2019/: CMakeCache.txt
build-review-vs2019b/: CMakeCache.txt
build-review-vs2022/: CMakeCache.txt
build-viewer-bridge-nmake/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.lib
build-webgpu-dawn-nmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build-webgpu-dawn-nmake2/: CMakeCache.txt  Makefile  cmake_install.cmake
build-webgpu-dawn-nmake3/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.lib
build-webgpu-dawn-vs/: CMakeCache.txt
build-webgpu-scaffold-nmake/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: GPU_MIGRATION_CHECKPOINT.md  OPTIMIZATION_STATUS.md
source/: avbd_gpu_solver.cpp  avbd_gpu_solver.h  collide.cpp  force.cpp  headless_server.cpp  joint.cpp  main.cpp  manifold.cpp  maths.h  mesh_lattice.h  parallel_for.h  render_backend.h  rigid.cpp  scenes.h  shell.html  sim_world.cpp  simulation_command.h  simulation_host.cpp  simulation_host.h  solver.cpp  solver.h  spring.cpp  viewer_bridge.cpp  viewer_bridge.h  webgpu_backend.cpp  webgpu_backend.h  webgpu_device.cpp  webgpu_device.h
viewer/: README.md  index.html  package-lock.json  package.json
viewer/scripts/: backend-compare.mjs  bridge-smoke.mjs  browser-smoke.mjs  capture-snapshot.mjs  fragmented-import-smoke.mjs  gpu-checkpoint.mjs  gpu-server-smoke.mjs  headless-benchmark.mjs  mesh-import-smoke.mjs  native-backend-compare.mjs  sample-smoke.mjs  start-gpu-server.mjs  thin-mesh-smoke.mjs  viewer-contract-smoke.mjs
viewer/src/: main.js  samples.js  styles.css
